# mlflow-template

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.py  setup.cfg
.github/workflows/: pytest.yml
configs.sample/: configs.yaml
configs_sample/: configs.yaml
mlflow_template/: __init__.py  cli.py
template/: __init__.py  cli.py
tests/: __init__.py  test_mlflow_template.py  test_template.py
