
[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[options]
install_requires = matplotlib>=3.5
    scipy>=1.8
python_requires = >=3.9
setup_requires = setuptools>=45.0
    setuptools_scm[toml]>=6.3.1
    wheel

[options.extras_require]
dev = black>=21.12b0
    isort>=5.10
    flake8>=4.0
test = pytest>=7.0
    pytest-cov>=3.0
    coverage>=6.3

[flake8]
exclude=docs
[tool:pytest]
collect_ignore = ['setup.py']
